--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GNOME Video Arcade 0.7.0
+========================
+
+        Released August ??, 2008
+
+        What's New
+        ----------
+        * Right-click on column headers (instead of the game list) to
+          quickly add or remove a column.
+
 GNOME Video Arcade 0.6.3
 ========================
 
