2009-01-01  Matthew Barnes  <mbarnes@redhat.com>
	* Update copyright notices on source files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-01  Matthew Barnes  <mbarnes@redhat.com>
+
+	* Update copyright notices on source files.
+
 2008-11-21  Matthew Barnes  <mbarnes@redhat.com>
 
 	* NEWS: Update for 0.6.5
