2009-03-15  Matthew Barnes  <mbarnes@redhat.com>
	* NEWS: Update for 0.6.6

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-15  Matthew Barnes  <mbarnes@redhat.com>
+
+	* NEWS: Update for 0.6.6
+
 2009-03-03  Matthew Barnes  <mbarnes@redhat.com>
 
 	* docs/reference:
