Remove empty <default> GConf schema tags.
2009-04-10  Matthew Barnes  <mbarnes@redhat.com>

	* data/gnome-video-arcade.schemas:
	Remove empty <default> tags.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,16 @@
+2009-04-10  Matthew Barnes  <mbarnes@redhat.com>
+
+	* data/gnome-video-arcade.schemas:
+	Remove empty <default> tags.
+
 2009-04-06  Matthew Barnes  <mbarnes@redhat.com>
 
-	* gva-process.c (process_stdout_ready):
+	* src/gva-process.c (process_stdout_ready):
 	Correctly handle the (G_IO_IN | G_IO_HUP) case.
 
 2009-04-06  Matthew Barnes  <mbarnes@redhat.com>
 
-	* gva-process.c (process_read_line):
+	* src/gva-process.c (process_read_line):
 	Remove the assertion before process_propagate_error(), since the
 	function can handle NULL GErrors.  Hopefully this fixes a crash on
 	OpenBSD, but I'd still like to know why g_io_channel_read_line()
