--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -14,6 +14,10 @@
 
 	* POTFILES.in: Add src/gva-input-file.c.
 
+2009-04-23  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2009-03-16  Matthew Barnes  <mbarnes@redhat.com>
 
 	* POTFILES.in: Add src/gva-nplayers.c.
