--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-23  Matthew Barnes   <mbarnes@redhat.com>
+
+	* POTFILES.in: Add src/gva-input-file.c.
+
 2009-04-23  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
