Added Italian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-02  Diego Pierotto <ita.translations@tiscali.it>
+
+	* it.po: Added Italian translation.
+
 2009-04-23  Mario Blättermann <mariobl@gnome.org>
 
 	* de.po: Added German translation.
