Updated Italian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-03  Diego Pierotto <ita.translations@tiscali.it>
+
+	* it.po: Updated Italian translation.
+
 2009-06-02  Diego Pierotto <ita.translations@tiscali.it>
 
 	* it.po: Added Italian translation.
