--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-06-12  Matthew Barnes  <mbarnes@redhat.com>
+
+	* configure.ac:
+	Post-release version bump.
+
+	* gva-db.c:
+	Support new elements in MAME 0.132: 'configuration', 'confsetting'
+	and 'adjuster'.
+
 2009-04-26  Matthew Barnes  <mbarnes@redhat.com>
 
 	* NEWS: Update for 0.6.7
